--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,8 +15,8 @@
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="#" class="btn btn-lg btn-outline">
-                        <i class="fa fa-download"></i> Download Theme
+                    <a href="cv.pdf" class="btn btn-lg btn-outline">
+                        <i class="fa fa-file-pdf-o"></i> Curriculum Vitae as PDF
                     </a>
                 </div>
             </div>
