--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,11 +3,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile.png" alt="">
+                    <img class="img-responsive" src="img/profile3.png" alt="profile pic">
                     <div class="intro-text">
-                        <span class="name">{{ site.title }}</span>
+                        <span class="name">Moin</span>
                         <hr class="star-light">
-                        <span class="skills">Web Developer - Graphic Artist - User Experience Designer</span>
+                        <span class="skills">HCI Master Student and former Software Developer</span>
                     </div>
                 </div>
             </div>
