--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
                 <div class="col-lg-12">
                     <img class="img-responsive" src="img/profile3.png" alt="profile pic">
                     <div class="intro-text">
-                        <span class="name">Moin</span>
+                        <span class="name">Moin</span><!--/Tjena/Hi-->
                         <hr class="star-light">
-                        <span class="skills">HCI Master Student and former Software Developer</span>
+                        <span class="skills">I'm Meike, a HCI Master Student and Software Developer.</span>
                     </div>
                 </div>
             </div>
