--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,7 +9,12 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization.</p>
+                    <p>I'm Meike. I was born in Germany, studied Computer Science with Media in Hamburg before I started working as a Software Developer at blau Mobilfunk in Hamburg.</p>
+                    I love
+                    <ul>
+                      <li>Learning
+                      <li>Coding
+                    </ul>
                 </div>
                 <div class="col-lg-4">
                     <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
