--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -15,7 +15,7 @@
                             <div class="caption">
                                 <div class="caption-content">
                                     <i class="fa fa-search-plus fa-3x"></i>
-                                    <p class="category">{{ post.category }}</p>
+                                    <p class="focus">{{ post.focus }}</p>
                                 </div>
                             </div>
                             <img src="img/portfolio/{{ post.img }}" class="img-responsive" alt="{{ post.alt }}">
