--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -1,7 +1,46 @@
-.portfolio-item .category {
+.portfolio-item .focus {
   margin-top: 10px;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
     margin-top: -30px;
+}
+
+.wikimedia {
+  /* Location of the image */
+  background-image: url(img/whiteboard_raw.jpg);
+}
+
+.github {
+  /* Location of the image */
+  background-image: url(img/portfolio/github.png);
+}
+
+.arduino {
+  /* Location of the image */
+  background-image: url(img/portfolio/arduino_large.jpg);
+}
+
+#background-image {
+
+
+  /* Background image is centered vertically and horizontally at all times */
+  background-position: center center;
+
+  /* Background image doesn't tile */
+  background-repeat: no-repeat;
+
+  /* Background image is fixed in the viewport so that it doesn't move when
+     the content's height is greater than the image's height */
+  background-attachment: fixed;
+
+  /* This is what makes the background image rescale based
+     on the container's size */
+  background-size: cover;
+
+  /* Set a background color that will be displayed
+     while the background image is loading */
+  background-color: #464646;
+
+  height: 200px;
 }
