--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -2,34 +2,53 @@
  {% for post in site.posts %}
     <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
+          <div id="background-image" class="{{ post.class }}">
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
                     </div>
                 </div>
             </div>
+          </div>
             <div class="container">
+
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-2">
+                    <div class="col-lg-12 text-center">
                         <div class="modal-body">
-                            <h2>{{ post.title }}</h2>
-                            <hr class="star-primary">
-                            <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                            <p>{{ post.description }}</p>
-                            <ul class="list-inline item-details">
-                                <li>Group Members:
-                                    <strong><a href="http://startbootstrap.com">{{ post.group }}</a>
-                                    </strong>
-                                </li>
-                                <li>Date:
-                                    <strong><a href="http://startbootstrap.com">{{ post.project-date }}</a>
-                                    </strong>
-                                </li>
-                                <li>Category:
-                                    <strong><a href="http://startbootstrap.com">{{ post.category }}</a>
-                                    </strong>
-                                </li>
-                            </ul>
+                            <div class="row">
+
+                              <h2>{{ post.title }}</h2>
+                              <hr class="star-primary">
+                              <div class="col-lg-8 text-left">
+                                <!-- <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}"> -->
+                                <p>{{ post.description }}</p>
+                              </div>
+                              <div class="col-lg-4 text-left">
+                                <dl class="dl-horizontal">
+                                  <dt>Focus</dt>
+                                  <dd>
+                                    {{ post.focus }}
+                                  </dd>
+                                  <dt>Keywords</dt>
+                                  <dd>
+                                    {{ post.keywords }}
+                                  </dd>
+
+                                  <dt>Length</dt>
+                                  <dd>
+                                      {{ post.project-length }}
+                                  </dd>
+                                  <dt>Date</dt>
+                                  <dd>
+                                      {{ post.project-date }}
+                                  </dd>
+                                  <dt>Team</dt>
+                                  <dd>
+                                    {{ post.group }}
+                                  </dd>
+                                </dl>
+                              </div>
+                            </div>
                             <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
