--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                     </ul>
                 </div>
                 <div class="col-lg-4">
-                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+                    <p>After 5 years of learning how to build good software I'm now on a journey to find out which systems to build in the first place. By learning the foundations of human centred design I aim to make good products and hereby empower people. I love to make people do things they couldn't do before. Those products need to be well designed, on the technical side, but maybe more importantly on the human side of things.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="cv.pdf" class="btn btn-lg btn-outline">
