--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -1,9 +1,19 @@
+/*add focus description to portfolio thumbnails*/
 .portfolio-item .focus {
   margin-top: 10px;
 }
 
 #portfolio .portfolio-item .portfolio-link .caption .caption-content i {
     margin-top: -30px;
+}
+
+.img-mobilescreen {
+  height: 400px;
+  margin: 2%
+}
+
+.portfolio-summary {
+  margin-top: 15px;
 }
 
 .wikimedia {
@@ -22,10 +32,8 @@
 }
 
 #background-image {
-
-
   /* Background image is centered vertically and horizontally at all times */
-  background-position: center center;
+  background-position: center bottom;
 
   /* Background image doesn't tile */
   background-repeat: no-repeat;
@@ -43,4 +51,32 @@
   background-color: #464646;
 
   height: 200px;
+
+  margin: 17px 0;
+}
+
+/*responsive video from https://gist.github.com/jgarber/2302238 */
+.flex-video {
+  position: relative;
+  padding-top: 25px;
+  padding-bottom: 67.5%;
+  height: 0;
+  margin-bottom: 35px;
+  overflow: hidden;
+}
+
+.flex-video.widescreen { padding-bottom: 57.25%; }
+.flex-video.vimeo { padding-top: 0; }
+
+.flex-video iframe,
+.flex-video object,
+.flex-video embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+@media only screen and (max-device-width: 800px), only screen and (device-width: 1024px) and (device-height: 600px), only screen and (width: 1280px) and (orientation: landscape), only screen and (device-width: 800px), only screen and (max-width: 767px) {
+  .flex-video { padding-top: 0; }
 }
