--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,15 +16,16 @@
                     <div class="col-lg-12 text-center">
                         <div class="modal-body">
                             <div class="row">
-
-                              <h2>{{ post.title }}</h2>
-                              <hr class="star-primary">
+                              <div class="col-lg-12 text-center">
+                                <h2>{{ post.title }}</h2>
+                                <hr class="star-primary">
+                              </div>
                               <div class="col-lg-8 text-left">
                                 <!-- <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}"> -->
                                 <p>{{ post.description }}</p>
                               </div>
                               <div class="col-lg-4 text-left">
-                                <dl class="dl-horizontal">
+                                <dl class="dl-horizontal portfolio-summary">
                                   <dt>Focus</dt>
                                   <dd>
                                     {{ post.focus }}
