second project description

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -9,15 +9,15 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm Meike. I was born in Germany, studied Computer Science with Media in Hamburg before I started working as a Software Developer at blau Mobilfunk in Hamburg.</p>
-                    I love
-                    <ul>
-                      <li>Learning
-                      <li>Coding
-                    </ul>
+                  <p>After 5 years of learning how to build good software I'm now on a journey to find out which systems to build in the first place. By learning the foundations of human centred design I aim to make good products and hereby empower people. I love to make people do things they couldn't do before. Those products need to be well designed, on the technical side, but maybe more importantly on the human side of things.</p>
+
                 </div>
                 <div class="col-lg-4">
-                    <p>After 5 years of learning how to build good software I'm now on a journey to find out which systems to build in the first place. By learning the foundations of human centred design I aim to make good products and hereby empower people. I love to make people do things they couldn't do before. Those products need to be well designed, on the technical side, but maybe more importantly on the human side of things.</p>
+                  <p>In UX projects I find myself especially engaged in the analysis of the problem phase,      doing research, conducting evaluations and obviously developing high-fidelity, interactive prototypes. Besides my web development experience I have used Axure for interactive wireframes and Arduino for hardware prototyping. I also enjoy the process of creating a concept. However, altough having a decent sense for design I don't consider myself as a visual designer.</p>
+                  <ul>
+                    <li>Learning
+                    <li>Coding
+                  </ul>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="cv.pdf" class="btn btn-lg btn-outline">
