--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -30,11 +30,6 @@
                                   <dd>
                                     {{ post.focus }}
                                   </dd>
-                                  <dt>Keywords</dt>
-                                  <dd>
-                                    {{ post.keywords }}
-                                  </dd>
-
                                   <dt>Length</dt>
                                   <dd>
                                       {{ post.project-length }}
@@ -46,6 +41,14 @@
                                   <dt>Team</dt>
                                   <dd>
                                     {{ post.group }}
+                                  </dd>
+                                  <dt>My Roles</dt>
+                                  <dd>
+                                    {{ post.role }}
+                                  </dd>
+                                  <dt>Keywords</dt>
+                                  <dd>
+                                    {{ post.keywords }}
                                   </dd>
                                 </dl>
                               </div>
