--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -33,14 +33,14 @@
 
 #background-image {
   /* Background image is centered vertically and horizontally at all times */
-  background-position: center bottom;
+  background-position: center center;
 
   /* Background image doesn't tile */
   background-repeat: no-repeat;
 
   /* Background image is fixed in the viewport so that it doesn't move when
      the content's height is greater than the image's height */
-  background-attachment: fixed;
+  /*background-attachment: fixed;*/
 
   /* This is what makes the background image rescale based
      on the container's size */
