some styling/rearranging stuff

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -14,13 +14,9 @@
                 </div>
                 <div class="col-lg-4">
                   <p>In UX projects I find myself especially engaged in the analysis of the problem phase,      doing research, conducting evaluations and obviously developing high-fidelity, interactive prototypes. Besides my web development experience I have used Axure for interactive wireframes and Arduino for hardware prototyping. I also enjoy the process of creating a concept. However, altough having a decent sense for design I don't consider myself as a visual designer.</p>
-                  <ul>
-                    <li>Learning
-                    <li>Coding
-                  </ul>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="cv.pdf" class="btn btn-lg btn-outline">
+                    <a href="CV-2015.pdf" class="btn btn-lg btn-outline">
                         <i class="fa fa-file-pdf-o"></i> Curriculum Vitae as PDF
                     </a>
                 </div>
