--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
                     <div class="intro-text">
                         <span class="name">Moin</span><!--/Tjena/Hi-->
                         <hr class="star-light">
-                        <span class="skills">I'm Meike, a HCI Master Student and Software Developer.</span>
+                        <span class="skills">I'm Meike, a HCI Master's Student and Software Developer.</span>
                     </div>
                 </div>
             </div>
