--- a/_includes/thoughts.html
+++ b/_includes/thoughts.html
@@ -1,15 +1,15 @@
 <!-- Skills Section -->
-   <section id="skills">
+   <section id="thoughts">
        <div class="container">
            <div class="row">
                <div class="col-lg-12 text-center">
-                   <h2>Skills</h2>
+                   <h2>Thoughts</h2>
                    <hr class="star-primary">
                </div>
            </div>
            <div class="row">
                <div class="col-lg-4 col-lg-offset-2">
-                   <p>I enjoy learning very much so I decided early on to learn swedish although this was not necessary for my studies because they are in english. I have been learning swedish for some months now. Although learning (cramming?) new words can be dull at times it is a highly rewarding process when you find yourself able to communicate with others in their own language for the first time. There is a very limited possibility to dive into a countries culture without speaking their language. I realized how much more insight one gets into the country you live in. A similar thing is important when being a designer. You can ask your users what they want but if you don't understand their context, their everday life around it, you will most likely not be able to create a good enough understanding/empathy. Only if the designer and the humans we are designing for start speaking the same "language" they can come up with ideas for products that can make an impact.
+                   <p>Because of my curiosity about wanting to understand what is happing around me and also my passion for learning new things I started to learn swedish. I enjoy learning very much so I decided early on to learn swedish although this was not necessary for my studies because they are in english. I have been learning swedish for some months now. Although learning (cramming?) new words can be dull at times it is a highly rewarding process when you find yourself able to communicate with others in their own language for the first time. There is a very limited possibility to dive into a countries culture without speaking their language. I realized how much more insight one gets into the country you live in. A similar thing is important when being a designer. You can ask your users what they want but if you don't understand their context, their everday life around it, you will most likely not be able to create a good enough understanding/empathy. Only if the designer and the humans we are designing for start speaking the same "language" they can come up with ideas for products that can make an impact.
                    "Understanding
 Early in the product process, empathy is what turns your ‘users’ into ‘people’. You don’t just ask them what features they want but what they are trying to accomplish. This type of empathy has nothing to do with the specifics of your product. It’s just trying to understand what users want and need." scott jenson </p>
                </div>
