--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,14 +6,7 @@
     {% include header.html %}
     {% include portfolio_grid.html %}
     {% include about.html %}
-    {% include skills.html %}
-
-    {% if site.contact == "static" %}
-    {% include contact_static.html %}
-    {% else %}
-    {% include contact.html %}
-    {% endif %}
-
+    {% include thoughts.html %}
     {% include footer.html %}
     {% include modals.html %}
     {% include js.html %}
