add github text

--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -59,6 +59,12 @@ header .intro-text .name {
   background-position: center bottom;/*calc(-637px)*/
 }
 
+figcaption {
+  text-align: center;
+  margin-bottom: 20px;
+  margin-top: -20px;
+}
+
 #background-image {
   /* Background image is centered vertically and horizontally at all times */
 
