more changes layout and text

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,23 +1,36 @@
  <!-- About Section -->
-    <section class="success" id="about">
+    <section id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2>About</h2>
-                    <hr class="star-light">
+                    <hr class="star-primary">
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                  <p>After 5 years of learning how to build good software I'm now on a journey to find out which systems to build in the first place. By learning the foundations of human centred design I aim to make good products and hereby empower people. I love to make people do things they couldn't do before. Those products need to be well designed, on the technical side, but maybe more importantly on the human side of things.</p>
-
+                  <h3>Who am I?</h3>
+                  <p>I was born and raised close to Hamburg in Germany. After doing my bachelor's in computer science and media I worked as a software developer for five years.</p>
+                  <p>I enjoy coding very much but I also became more and more interested in design.</p>
+                  <p>Thus, I'm now on a journey to learn the foundations of human-centred design. I aim to make useful products that empower people. Those products need to be well designed, on the technical side, but maybe more importantly on the human side of things.</p>
                 </div>
-                <div class="col-lg-4">
-                  <p>In UX projects I find myself especially engaged in the analysis of the problem phase,      doing research, conducting evaluations and obviously developing high-fidelity, interactive prototypes. Besides my web development experience I have used Axure for interactive wireframes and Arduino for hardware prototyping. I also enjoy the process of creating a concept. However, altough having a decent sense for design I don't consider myself as a visual designer.</p>
+                <div class="col-lg-4 ">
+                  <h3>Skills</h3>
+                    <p>I'm currently looking for a summer job in July and August 2015. I will be looking for a full-time job in early spring 2016. These are my skills:</p>
+                    <div class="skills">
+                  <ul class="list-unstyled">
+                    <li class="skill prototype"><p>Prototyping</p></li>
+                    <li class="skill ux"><p>UX Strategy</p></li>
+                    <li class="skill research"><p>User Research</p></li>
+                    <li class="skill interaction"><p>Interaction Design</p></li>
+                    <li class="skill usability"><p>Usability Analysis</p></li>
+                    <li class="skill visual"><p>Visual Design</p></li>
+                  </div>
+                  </ul>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <a href="CV-2015.pdf" class="btn btn-lg btn-outline">
-                        <i class="fa fa-file-pdf-o"></i> Curriculum Vitae as PDF
+                    <a href="CV-2015.pdf" class="btn btn-lg btn-outline resume">
+                        <i class="fa fa-file-pdf-o"></i> Full Resume
                     </a>
                 </div>
             </div>
