--- a/_includes/thoughts.html
+++ b/_includes/thoughts.html
@@ -9,12 +9,11 @@
            </div>
            <div class="row">
                <div class="col-lg-4 col-lg-offset-2">
-                   <p>Because of my curiosity about wanting to understand what is happing around me and also my passion for learning new things I started to learn swedish. I enjoy learning very much so I decided early on to learn swedish although this was not necessary for my studies because they are in english. I have been learning swedish for some months now. Although learning (cramming?) new words can be dull at times it is a highly rewarding process when you find yourself able to communicate with others in their own language for the first time. There is a very limited possibility to dive into a countries culture without speaking their language. I realized how much more insight one gets into the country you live in. A similar thing is important when being a designer. You can ask your users what they want but if you don't understand their context, their everday life around it, you will most likely not be able to create a good enough understanding/empathy. Only if the designer and the humans we are designing for start speaking the same "language" they can come up with ideas for products that can make an impact.
-                   "Understanding
-Early in the product process, empathy is what turns your ‘users’ into ‘people’. You don’t just ask them what features they want but what they are trying to accomplish. This type of empathy has nothing to do with the specifics of your product. It’s just trying to understand what users want and need." scott jenson </p>
+                   <p>
+                     I'm a very curious person that loves to learn something new every day. Thus, besides studying HCI, I started to learn Swedish when I moved to Sweden. Lately, I have started to understand most of normal conversations. It's very interesting to see how much more insights into a culture one gets when not having to rely on translation of others.
                </div>
                <div class="col-lg-4">
-                 <p>In UX projects I find myself especially engaged in the analysis of the problem phase, doing research, conducting evaluations and obviously developing high-fidelity, interactive prototypes. Besides my web development experience I have used Axure for interactive wireframes and Arduino for hardware prototyping. I also enjoy the process of creating a concept. However, altough having a decent sense for design I don't consider myself as a visual designer.</p>
+                 <p>I realised that the ability to dive into a certain culture and create a deeper understanding is something which is important for becoming a designer as well. It's not enough to directly ask users what they want. Only if the designer and the humans they're are designing for, start speaking the same "language", they can come up with ideas for products that can make an impact.</p>
                </div>
            </div>
        </div>
