styling and stuff

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -13,10 +13,10 @@
                   <p>I was born and raised close to Hamburg in Germany. After doing my bachelor's in computer science and media I worked as a software developer for five years.</p>
                   <p>I enjoy coding very much but I also became more and more interested in design.</p>
                   <p>Thus, I'm now on a journey to learn the foundations of human-centred design. I aim to make useful products that empower people. Those products need to be well designed, on the technical side, but maybe more importantly on the human side of things.</p>
+                  <p>I'm currently looking for a summer job in July and August 2015. I will be looking for a full-time job in early spring 2016.</p>
                 </div>
                 <div class="col-lg-4 ">
                   <h3>Skills</h3>
-                    <p>I'm currently looking for a summer job in July and August 2015. I will be looking for a full-time job in early spring 2016. These are my skills:</p>
                     <div class="skills">
                   <ul class="list-unstyled">
                     <li class="skill prototype"><p>Prototyping</p></li>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="CV-2015.pdf" class="btn btn-lg btn-outline resume">
-                        <i class="fa fa-file-pdf-o"></i> Full Resume
+                        <i class="fa fa-file-pdf-o"></i>  Resume
                     </a>
                 </div>
             </div>
