--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -1,8 +1,8 @@
 /*add focus description to portfolio thumbnails*/
 .skills p {
     color: white;
-    font-size: 14px;
-    padding: 5px 10px 10px 13px;
+    font-size: 12px;
+    padding: 7px 10px 10px 10px;
     width: 100%;
 }
 
@@ -40,7 +40,7 @@
 }
 
 body {
-  font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 
 h1,
@@ -49,19 +49,31 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Merriweather","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
   text-transform: none;
 }
 
 header .intro-text .name {
-  font-family: "Merriweather","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
   text-transform: none;
 }
 
 .navbar {
-  font-family: "Merriweather","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-family: "Raleway","Helvetica Neue",Helvetica,Arial,sans-serif;
   text-transform: none;
   font-size:18px;
+}
+
+hr.star-light, hr.star-primary {
+  border-width: 1px 0 0;
+}
+
+hr.star-light::after, hr.star-primary::after {
+  font-size: 1em;
+}
+
+h3 {
+    font-size: 20px;
 }
 
 .portfolio-item .focus {
@@ -77,8 +89,8 @@ header .intro-text .name {
   margin: 2%
 }
 
-.portfolio-summary {
-  margin-top: 15px;
+.close-modal-button {
+  margin-top: 20px;
 }
 
 .wikimedia {
