--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -2,13 +2,13 @@
  {% for post in site.posts %}
     <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
-          <div id="background-image" class="{{ post.class }}">
+          <!-- <div id="background-image" class="{{ post.class }}"> -->
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
                     </div>
                 </div>
-            </div>
+            <!-- </div> -->
           </div>
             <div class="container">
 
@@ -19,12 +19,9 @@
                               <div class="col-lg-12 text-center">
                                 <h2>{{ post.title }}</h2>
                                 <hr class="star-primary">
+
                               </div>
-                              <div class="col-lg-8 text-left">
-                                <!-- <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}"> -->
-                                <p>{{ post.description }}</p>
-                              </div>
-                              <div class="col-lg-4 text-left">
+                              <div class="col-lg-8 col-lg-offset-2 text-left">
                                 <dl class="dl-horizontal portfolio-summary">
                                   <dt>Focus</dt>
                                   <dd>
@@ -51,9 +48,12 @@
                                     {{ post.keywords }}
                                   </dd>
                                 </dl>
+                                <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+                                <!-- <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}"> -->
+                                <p>{{ post.description }}</p>
                               </div>
                             </div>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
+                            <button type="button" class="btn btn-default close-modal-button" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
                 </div>
