other pictures and rearrange stuff

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,7 +11,7 @@
                 <div class="col-lg-4 col-lg-offset-2">
                   <h3>Who am I?</h3>
                   <p>I was born and raised close to Hamburg in Germany. After doing my bachelor's in computer science and media I worked as a software developer for five years.</p>
-                  <p>I enjoy coding very much but I also became more and more interested in design.</p>
+                  <p>I enjoy coding very much but I also became more and more interested in UX design.</p>
                   <p>Thus, I'm now on a journey to learn the foundations of human-centred design. I aim to make useful products that empower people. Those products need to be well designed, on the technical side, but maybe more importantly on the human side of things.</p>
                   <p>I'm currently looking for a summer job in July and August 2015. I will be looking for a full-time job in early spring 2016.</p>
                 </div>
