--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,10 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="img/profile3.png" alt="profile pic">
                     <div class="intro-text">
-                        <span class="name">Moin</span><!--/Tjena/Hi-->
-                        <hr class="star-light">
+                        <span class="name">Moin!</span><!--/Tjena/Hi-->
                         <span class="skills">I'm Meike, a HCI Master's Student and Software Developer.</span>
                     </div>
                 </div>
