--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name">Moin!</span><!--/Tjena/Hi-->
+                        <span class="name visible-sm-block visible-md-block visible-lg-block">Moin!</span><!--/Tjena/Hi-->
                         <span class="skills visible-sm-block visible-md-block visible-lg-block">I'm Meike, a HCI Master's Student and Software Developer.</span>
                     </div>
                 </div>
