--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -2,16 +2,13 @@
  {% for post in site.posts %}
     <div class="portfolio-modal modal fade" id="portfolioModal-{{ post.modal-id }}" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
-          <!-- <div id="background-image" class="{{ post.class }}"> -->
             <div class="close-modal" data-dismiss="modal">
                 <div class="lr">
                     <div class="rl">
                     </div>
                 </div>
-            <!-- </div> -->
           </div>
             <div class="container">
-
                 <div class="row">
                     <div class="col-lg-12 text-center">
                         <div class="modal-body">
@@ -19,7 +16,6 @@
                               <div class="col-lg-12 text-center">
                                 <h2>{{ post.title }}</h2>
                                 <hr class="star-primary">
-
                               </div>
                               <div class="col-lg-8 col-lg-offset-2 text-left">
                                 <dl class="dl-horizontal portfolio-summary">
@@ -49,8 +45,7 @@
                                   </dd>
                                 </dl>
                                 <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                                <!-- <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}"> -->
-                                <p>{{ post.description }}</p>
+                                <p>{{ post.content }}</p>
                               </div>
                             </div>
                             <button type="button" class="btn btn-default close-modal-button" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
