--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -45,7 +45,7 @@
                                   </dd>
                                 </dl>
                                 <img src="img/portfolio/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
-                                <p>{{ post.content }}</p>
+                                {{ post.content }}
                               </div>
                             </div>
                             <button type="button" class="btn btn-default close-modal-button" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
