--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -1,6 +1,6 @@
 header {
     background-attachment: scroll;
-    background-image: url("img/snow_trim.png");
+    background-image: url("img/snow_trim.jpg");
     background-repeat:no-repeat;
     -webkit-background-size: cover;
     -moz-background-size: cover;
