--- a/_includes/about.html
+++ b/_includes/about.html
@@ -11,21 +11,14 @@
                 <div class="col-lg-4 col-lg-offset-2">
                   <h3>Who am I?</h3>
                   <p>I was born and raised close to Hamburg in Germany. After doing my bachelor's in computer science and media I worked as a software developer for five years.</p>
-                  <p>I enjoy coding very much but I also became more and more interested in UX design.</p>
-                  <p>Thus, I'm now on a journey to learn the foundations of human-centred design. I aim to make useful products that empower people. Those products need to be well designed, on the technical side, but maybe more importantly on the human side of things.</p>
+                  <p>I enjoy coding very much but I also became more and more interested in UX design. I therefore moved to Sweden to do my Master's in HCI.</p>
+                  <p>Thus, I'm now on a journey to learn more about human-centred design. I aim to make useful products that empower people. Those products need to be well designed, on the technical side, but maybe even more importantly on the human side of things.</p>
                 </div>
                 <div class="col-lg-4 ">
                   <h3>Skills</h3>
-                  <div class="skills">
-                    <ul class="list-unstyled">
-                      <li class="skill prototype"><p>Prototyping</p></li>
-                      <li class="skill ux"><p>UX Strategy</p></li>
-                      <li class="skill research"><p>User Research</p></li>
-                      <li class="skill interaction"><p>Interaction Design</p></li>
-                      <li class="skill usability"><p>Usability Analysis</p></li>
-                      <li class="skill visual"><p>Visual Design</p></li>
-                    </ul>
-                  </div>
+                  <p>During the design process, I have found myself particularly engaged during the phases of user research, concept generation (sketches, wireframes, workshops), prototyping (with tools like Axure or directly in code) and user experience evaluations.</p>
+                  <p>An area I am interested, but less confident in, is visual design.</p>
+                  <p>Besides that, I have a strong interest in interactions beyond the Web as explored in my thesis (see "Works"). I also enjoy hardware prototyping with Arduino and/or wood quite a lot.</p>
                 </div>
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <a href="CV-2015.pdf" class="btn btn-lg btn-outline resume">
