change to interests

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -15,7 +15,7 @@
                   <p>Thus, I'm now on a journey to learn more about human-centred design. I aim to make useful products that empower people. Those products need to be well designed, on the technical side, but maybe even more importantly on the human side of things.</p>
                 </div>
                 <div class="col-lg-4 ">
-                  <h3>Skills</h3>
+                  <h3>Interests</h3>
                   <p>During the design process, I have found myself particularly engaged during the phases of user research, concept generation (sketches, wireframes, workshops), prototyping (with tools like Axure or directly in code) and user experience evaluations.</p>
                   <p>An area I am interested, but less confident in, is visual design.</p>
                   <p>Besides that, I have a strong interest in interactions beyond the Web as explored in my thesis (see "Works"). I also enjoy hardware prototyping with Arduino and/or wood quite a lot.</p>
