--- a/_includes/css/custom.css
+++ b/_includes/css/custom.css
@@ -21,45 +21,12 @@ header {
     color: #{{ site.color.secondary-dark }};
 }
 
-/*add focus description to portfolio thumbnails*/
-.skills p {
-    color: white;
-    font-size: 12px;
-    padding: 7px 10px 10px 10px;
-    width: 100%;
+.img-centered {
+  display:block;
 }
 
-.skills ul li {
-    margin-bottom: 15px;
-}
-
-.skill {
-    background: none repeat scroll 0 0 #{{ site.color.secondary }};
-    height: 31px;
-}
-
-.prototype {
-  width: 320px;
-}
-
-.research {
-  width: 240px;
-}
-
-.ux {
-  width: 220px;
-}
-
-.interaction {
-  width: 160px;
-}
-
-.visual {
-  width: 100px;
-}
-
-.usability {
-  width: 220px;
+figure {
+  margin-top: 25px;
 }
 
 body {
@@ -127,24 +94,6 @@ h3 {
 
 .close-modal-button {
   margin-top: 20px;
-}
-
-.wikimedia {
-  /* Location of the image */
-  background-image: url(img/whiteboard_raw.jpg);
-  background-position: center center; /*calc(-456px)*/
-}
-
-.github {
-  /* Location of the image */
-  background-image: url(img/portfolio/github.png);
-  background-position: center calc(-186px);
-}
-
-.arduino {
-  /* Location of the image */
-  background-image: url(img/portfolio/arduino_large.jpg);
-  background-position: center bottom;/*calc(-637px)*/
 }
 
 figcaption {
